[package]
name = "tokio-openssl"
version = "0.6.3"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
license = "MIT/Apache-2.0"
edition = "2018"
repository = "https://github.com/tokio-rs/tokio-openssl"
description = """
An implementation of SSL streams for Tokio backed by OpenSSL
"""

[dependencies]
futures-util = { version = "0.3", default-features = false }
openssl = "0.10.32"
openssl-sys = "0.9"
tokio = { git = "https://github.com/tfreiberg-fastly/tokio", rev = "453bd91e8484e871b7bbf28806e4844594b2d696" }

[dev-dependencies]
tokio = { git = "https://github.com/tfreiberg-fastly/tokio", rev = "453bd91e8484e871b7bbf28806e4844594b2d696", features = ["full"] }
